--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Okul Seçimi</title>
+    <title>OKUL SECIMI</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -63,10 +63,10 @@
 <body>
 
     <div class="container">
-        <h1>Okul Seçin</h1>
-        <a href="https://silopiverimliilkokulu.meb.k12.tr/" class="school-button">Verimli Ýlkokulu</a>
+        <h1>OKULLARIMIZ</h1>
+        <a href="https://silopiverimliilkokulu.meb.k12.tr/" class="school-button">Verimli Ilkokulu</a>
         <a href="https://silopiverimliortaokulu.meb.k12.tr/" class="school-button">Verimli Ortaokulu</a>
-        <a href="https://verimliiho.meb.k12.tr/" class="school-button">Verimli Ýmam Hatip Ortaokulu</a>
+        <a href="https://verimliiho.meb.k12.tr/" class="school-button">Verimli Imam Hatip Ortaokulu</a>
     </div>
 
 </body>
